--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "stickers0",
-  "version": "0.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
-    "jade": "~1.11.0",
+    "knex": "^0.13.0",
     "morgan": "~1.8.1",
+    "pg": "^7.3.0",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
