--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "chai": "^4.1.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "knex": "^0.13.0",
+    "mocha": "^3.5.3",
     "morgan": "~1.8.1",
     "pg": "^7.3.0",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "supertest": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
