--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "test": "(dropdb --if-exist test-stickers && createdb test-stickers) && NODE_ENV=test mocha"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
