--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "~1.17.1",
     "chai": "^4.1.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "knex": "^0.13.0",
